--- a/project.html
+++ b/project.html
@@ -176,7 +176,7 @@
       <div class="mini-span">
         <div class="inline-dev">
           <span></span>
-          <img class="img-classB" src="/Designing success/img/11.png" alt="">
+          <img class="img-classB" src="/img/11.png" alt="">
         </div>
 
         <div class="pre-dev">
@@ -189,7 +189,7 @@
       <div class="mini-span">
         <div class="inline-dev">
           <span></span>
-          <img class="img-classB" src="/Designing success/img/12.png" alt="">
+          <img class="img-classB" src="/img/12.png" alt="">
         </div>
 
         <div class="pre-dev">
@@ -213,7 +213,7 @@
     </div>
 
     <div class="sixA_dev">
-      <img src="/Designing success/img/13.png" alt="">
+      <img src="/img/13.png" alt="">
     </div>
   </section>
 
@@ -221,14 +221,14 @@
     <div class="seven_left">
 
       <div class="dev_1A">
-        <img src="../Designing success/img/14.jpg" alt="">
+        <img src="/img/14.jpg" alt="">
         <h1>Consulting, Solution & Service</h1>
         <div class="dev_1C"></div>
       </div>
 
       <div class="seven_perent">
         <div class="seven_child1">
-          <img src="../Designing success/img/15.jpg" alt="">
+          <img src="/img/15.jpg" alt="">
         </div>
         <div class="seven_child2">
           <h1>Our Team</h1>
@@ -275,7 +275,7 @@
         <button class="btn10">LEARN MORE</button>
       </div>
       <div class="right_img">
-        <img src="../Designing success/img/16.jpg" alt="">
+        <img src="/img/16.jpg" alt="">
 
       </div>
 
