--- a/project.html
+++ b/project.html
@@ -9,6 +9,8 @@
 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playwrite+FR+Trad+Guides&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+
+    @import url('href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playwrite+FR+Trad+Guides&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
   </style>
 
 </head>
@@ -127,7 +129,7 @@
         </div>
         <div class="miniB-content">
           <h1>MISSION</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
+          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
         </div>
       </div>
 
@@ -307,16 +309,117 @@
     </div>
     <div class="temp_dev">
 
-      <div class="card_dev"></div>
-      <div class="card_dev1"></div>
-      <div class="card_dev2"></div>
-      <div class="card_dev3"></div>
+      <div class="card_dev">
+        <h1>awards won</h1>
+        <h2>10</h2>
+
+      </div>
+
+      <div class="card_dev1">
+        <h1>XP YEARS</h1>
+        <h2>12+</h2>
+      </div>
+
+      <div class="card_dev2">
+        <h1>clients</h1>
+        <h2>10k</h2>
+      </div>
+
+      <div class="card_dev3">
+        <h1>projects</h1>
+        <h2>78+</h2>
+      </div>
 
     </div>
     <div class="ime_devnimi">
       <img src="/img/18.jpg" alt="">
     </div>
   </section>
+
+  <section class="tenth-section">
+
+    <div class="ten_aside">
+      <h1>Get in touch</h1>
+      <h3>We believe in innovation and creative problem solving.</h3>
+      <p>Etiam sit amet convallis erat - class aptent taciti sociosqu ad litora torquent per conubia! Maecenas gravida
+        lacus. Lorem etiam sit amet convallis erat.</p>
+
+      <div class="maindev-logo">
+        <div class="mlogo-dev1">
+          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 30 30">
+            <path
+              d="M 9.9980469 3 C 6.1390469 3 3 6.1419531 3 10.001953 L 3 20.001953 C 3 23.860953 6.1419531 27 10.001953 27 L 20.001953 27 C 23.860953 27 27 23.858047 27 19.998047 L 27 9.9980469 C 27 6.1390469 23.858047 3 19.998047 3 L 9.9980469 3 z M 22 7 C 22.552 7 23 7.448 23 8 C 23 8.552 22.552 9 22 9 C 21.448 9 21 8.552 21 8 C 21 7.448 21.448 7 22 7 z M 15 9 C 18.309 9 21 11.691 21 15 C 21 18.309 18.309 21 15 21 C 11.691 21 9 18.309 9 15 C 9 11.691 11.691 9 15 9 z M 15 11 A 4 4 0 0 0 11 15 A 4 4 0 0 0 15 19 A 4 4 0 0 0 19 15 A 4 4 0 0 0 15 11 z">
+            </path>
+          </svg>
+        </div>
+        <div class="mlogo-dev2">
+          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 30 30">
+            <path
+              d="M12,27V15H8v-4h4V8.852C12,4.785,13.981,3,17.361,3c1.619,0,2.475,0.12,2.88,0.175V7h-2.305C16.501,7,16,7.757,16,9.291V11 h4.205l-0.571,4H16v12H12z">
+            </path>
+          </svg>
+        </div>
+        <div class="mlogo-dev3">
+          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 30 30">
+            <path
+              d="M28,6.937c-0.957,0.425-1.985,0.711-3.064,0.84c1.102-0.66,1.947-1.705,2.345-2.951c-1.03,0.611-2.172,1.055-3.388,1.295 c-0.973-1.037-2.359-1.685-3.893-1.685c-2.946,0-5.334,2.389-5.334,5.334c0,0.418,0.048,0.826,0.138,1.215 c-4.433-0.222-8.363-2.346-10.995-5.574C3.351,6.199,3.088,7.115,3.088,8.094c0,1.85,0.941,3.483,2.372,4.439 c-0.874-0.028-1.697-0.268-2.416-0.667c0,0.023,0,0.044,0,0.067c0,2.585,1.838,4.741,4.279,5.23 c-0.447,0.122-0.919,0.187-1.406,0.187c-0.343,0-0.678-0.034-1.003-0.095c0.679,2.119,2.649,3.662,4.983,3.705 c-1.825,1.431-4.125,2.284-6.625,2.284c-0.43,0-0.855-0.025-1.273-0.075c2.361,1.513,5.164,2.396,8.177,2.396 c9.812,0,15.176-8.128,15.176-15.177c0-0.231-0.005-0.461-0.015-0.69C26.38,8.945,27.285,8.006,28,6.937z">
+            </path>
+          </svg>
+        </div>
+        <div class="mlogo-dev4">
+          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 64 64">
+            <path
+              d="M53.527,17.427C55.714,19.677,56,23.252,56,32s-0.286,12.323-2.473,14.573C51.34,48.822,49.062,49,32,49	s-19.34-0.178-21.527-2.427C8.286,44.323,8,40.748,8,32s0.286-12.323,2.473-14.573S14.938,15,32,15S51.34,15.178,53.527,17.427z M27.95,39.417l12.146-7.038L27.95,25.451V39.417z">
+            </path>
+          </svg>
+        </div>
+        <div class="mlogo-dev5">
+          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 24 24">
+            <path
+              d="M19.077,4.928c-2.082-2.083-4.922-3.134-7.904-2.894C7.164,2.356,3.65,5.144,2.474,8.99 c-0.84,2.748-0.487,5.617,0.881,7.987L2.059,21.28c-0.124,0.413,0.253,0.802,0.67,0.691l4.504-1.207 c1.459,0.796,3.101,1.215,4.773,1.216h0.004c4.195,0,8.071-2.566,9.412-6.541C22.728,11.563,21.762,7.616,19.077,4.928z M16.898,15.554c-0.208,0.583-1.227,1.145-1.685,1.186c-0.458,0.042-0.887,0.207-2.995-0.624c-2.537-1-4.139-3.601-4.263-3.767 c-0.125-0.167-1.019-1.353-1.019-2.581S7.581,7.936,7.81,7.687c0.229-0.25,0.499-0.312,0.666-0.312c0.166,0,0.333,0,0.478,0.006 c0.178,0.007,0.375,0.016,0.562,0.431c0.222,0.494,0.707,1.728,0.769,1.853s0.104,0.271,0.021,0.437s-0.125,0.27-0.249,0.416 c-0.125,0.146-0.262,0.325-0.374,0.437c-0.125,0.124-0.255,0.26-0.11,0.509c0.146,0.25,0.646,1.067,1.388,1.728 c0.954,0.85,1.757,1.113,2.007,1.239c0.25,0.125,0.395,0.104,0.541-0.063c0.146-0.166,0.624-0.728,0.79-0.978 s0.333-0.208,0.562-0.125s1.456,0.687,1.705,0.812c0.25,0.125,0.416,0.187,0.478,0.291 C17.106,14.471,17.106,14.971,16.898,15.554z">
+            </path>
+          </svg>
+        </div>
+      </div>
+    </div>
+
+    <div class="tenA_aside">
+      <h3>call us</h3>
+      <p>1 (234) 567-891<br>
+        1 (234) 987-654</p>
+      <h3>location</h3>
+      <p>121 Rock Sreet, 21<br> Avenue,<br>
+        New York, NY 92103-9000</p>
+      <h3>Our top services</h3>
+      <p>✔Consulting<br>
+        ✔Coaching<br>
+        ✔Development</p>
+    </div>
+
+    <div class="tenb_aside">
+
+      <form>
+        <div class="mail_dev">
+        <input type="text" placeholder="Enter Your Name">
+        </div>
+
+        <div class="mail_devA">
+        <input type="email" placeholder="Enter Your valid email address">
+        </div>
+
+        <div class="mail_devb">
+        <textarea name="" id=""></textarea>
+        </div>
+
+        
+      </form>
+      <button class="btn12">SUBMIT</button>
+    </div>
+  </section>
+
+  <footer class="footer_last">
+   <p> All Rights Reserved By Bhragv Metaliya.</p>
+  </footer>
 
 </body>
 
